test/mutation_analysis/s0496_next_greater_element_i/hafis/starchat/mutants/17/result.txt
./test/mutation_analysis/s0496_next_greater_element_i/hafis/starchat/mutants/17/Solution.java:32: error: unreachable statement
                while (false) {
                              ^
1 error
